src/css/flux.css
/* ... */
/* END Variables */

/* Color */
.zone-one {
    background-color: var(--zone-gray);
}
.zone-two {
    background-color: var(--zone-blue);
}
.zone-three {
    background-color: var(--zone-teal);
}
.zone-four {
    background-color: var(--zone-green);
}
.zone-five {
    background-color: var(--zone-yellow);
}
.zone-six {
    background-color: var(--zone-orange);
}
.zone-seven {
    background-color: var(--zone-red);
}

.zone-one-color {
    color: var(--zone-gray);
}
.zone-two-color {
    color: var(--zone-blue);
}
.zone-three-color {
    color: var(--zone-teal);
}
.zone-four-color {
    color: var(--zone-green);
}
.zone-five-color {
    color: var(--zone-yellow);
}
.zone-six-color {
    color: var(--zone-orange);
}
.zone-seven-color {
    color: var(--zone-red);
}

.black {
    color: var(--black);
}
.white {
    color: var(--white);
}
.gray {
    color: var(--gray);
}
.yellow {
    color: var(--yellow);
}
.red {
    color: var(--red);
}
.green {
    color: var(--green)
}

.black-bg {
    background-color: var(--black);
}
.white-bg {
    background-color: var(--white);
}
.gray-bg {
    background-color: var(--gray);
}
.yellow-bg {
    background-color: var(--yellow);
}
.red-bg {
    background-color: var(--red);
}
.green-bg {
    background-color: var(--green);
}


.gray-zone {
    background-color: var(--zone-gray);
}
.blue-zone {
    background-color: var(--zone-blue);
}
.green-zone {
    background-color: var(--zone-green);
}
.yellow-zone {
    background-color: var(--zone-yellow);
}
.orange-zone {
    background-color: var(--zone-orange);
}
.red-zone {
    background-color: var(--zone-red);
}
.purple-zone {
    background-color: var(--zone-red);
}

.chrome-bg {
    background-color: var(--chrome)
}
.dark-bg {
    background-color: var(--dark);
}
/* End Color */

/* Theme */
/* Dark Theme */
body,
body.dark-theme {
    --background-color: var(--dark);
    --background-color-2: var(--chrome);
    --foreground-color: var(--white);
    --foreground-color-inactive: var(--gray);
    --border-color: var(--white-opacity-01);
    --progress: #fff4;
    --input-color: var(--white);
    --toogle-inactive-color: var(--gray);
    --toogle-active-color: var(--white);
}
@media (prefers-color-scheme: dark) {
    body.auto-theme {
        --background-color: var(--dark);
        --background-color-2: var(--chrome);
        --foreground-color: var(--white);
        --foreground-color-inactive: var(--gray);
        --border-color: var(--white-opacity-01);
        --progress: #fff4;
        --input-color: var(--white);
        --toogle-inactive-color: var(--gray);
        --toogle-active-color: var(--white);
    }
}

/* End Dark Theme */

/* White Theme */
body.white-theme {
    --background-color: var(--white);
    --background-color-2: var(--chrome-white);
    --foreground-color: var(--dark);
    --foreground-color-inactive: var(--gray);
    --border-color: var(--black-opacity-01);
    --progress: #6f6f6f44;
    --input-color: var(--white);
    --toogle-inactive-color: var(--gray);
    --toogle-active-color: var(--zone-blue);
}
@media (prefers-color-scheme: light) {
    body.auto-theme {
        --background-color: var(--white);
        --background-color-2: var(--chrome-white);
        --foreground-color: var(--dark);
        --foreground-color-inactive: var(--gray);
        --border-color: var(--black-opacity-01);
        --progress: #6f6f6f44;
        --input-color: var(--white);
        --toogle-inactive-color: var(--gray);
        --toogle-active-color: var(--zone-blue);
    }
}
/* End White Theme */
body {
    color: var(--foreground-color);
    background-color: var(--background-color);
}

input {
    color: var(--foreground-color);
    background-color: var(--input-color);
}

svg {
    fill: var(--foreground-color)
}

.chrome-bg {
    background-color: var(--background-color-2);
}

.btn {
    color: var(--foreground-color);
    background-color: var(--background-color-2);
}

.connections-header {
    background-color: var(--background-color-2);
}

#progress-active {
    background-color: transparent;
}

.flat-btn {
    color: var(--foreground-color);
}

.radio {
    fill: var(--foreground-color);
}

.mode.active {
    color: var(--foreground-color);
}

.icon-btn .icon {
    fill: var(--foreground-color-inactive);
}

.icon-btn .text {
    color: var(--foreground-color-inactive);
}

.tab-btn.active .text {
    color: var(--foreground-color);
}
.tab-btn.active .icon-fill {
    fill: var(--foreground-color);
}
/* End Theme */

/* Page */
.wrapper {
    position: relative;
    width: 100%;
    min-height: 100vh;
    align-content: center;
    overflow-x: hidden;

    font-family: var(--ssr-font-family);
    /* font-variant-numeric: tabular-nums; */
}
.page {
    width: 100%;
    min-height: 110vh;
    padding-bottom: 12em;
    -webkit-transition: all 0.2s ease-in-out 0s;
    transition: all 0.2s ease-in-out 0s;
}

.page {
    display: none;
}

.page.active {
    display: block;
}

.page--header {
    width: 100%;
}

.page--heading {
    font-size: 1.1em;
    text-transform: uppercase;
    line-height: 4em;
    text-align: center;
    letter-spacing: 1px;
}

#workouts-page .page--header {
    margin-bottom: 40px;
}
/* End Page */

/* Home Page */
#home-page {
    min-height: 100vh;
    padding: 0;
    z-index: 1;
}

#home-page-wrapper {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 50px 2.5fr 1fr 1fr 98px 100px;
    height: 100vh;
}

#compatibility--cont {
    font-size: 1.4em;
    width: 100%;
    padding: 1em 0.5em;
    line-height: 1.5em;
    background-color: var(--red);
    border-bottom: 1px solid var(--dark);
    z-index: 1;
}

#compatibility--cont a {
    color: var(--yellow);
}

/* Switch btn */
.connections-header {
    font-size: 1.1rem;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    align-content: center;
    grid-row: 1;
}
/* ... */

